--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>電腦版刮刮履歷</title>
+    <title>新年刮刮刮</title>
     <style type="text/css">
         #c1 {
             border: 1px solid white;
