--- a/worklog.html
+++ b/worklog.html
@@ -28,7 +28,7 @@
   <!-- 新增表單 -->
   <form id="logForm">
     <input type="date" id="date" required>
-    <input type="text" id="event" placeholder="事件" required>
+    <textarea id="event" placeholder="事件" required></textarea>
     <input type="text" id="dept" placeholder="處室">
     <input type="text" id="target" placeholder="對象">
     <input type="text" id="note" placeholder="備註">
@@ -57,7 +57,7 @@
       <h3>編輯事件</h3>
       <form id="editForm">
         <input type="date" id="editDate" required><br>
-        <input type="text" id="editEvent" required><br>
+        <textarea id="editEvent" required></textarea><br>
         <input type="text" id="editDept"><br>
         <input type="text" id="editTarget"><br>
         <input type="text" id="editNote"><br>
