--- a/worklog.html
+++ b/worklog.html
@@ -27,7 +27,7 @@
 
   <!-- 新增表單 -->
   <form id="logForm">
-    <input type="date" id="filterDate" required>
+    <input type="date" id="date" required>
     <textarea id="event" placeholder="事件" required></textarea>
     <input type="text" id="dept" placeholder="處室">
     <input type="text" id="target" placeholder="對象">
